1998-10-13  Tom Tromey  <tromey@cygnus.com>

	* libobj7.test: Updated to reflect minor change in automake (test
	wasn't resilient enough).
	* instman.test: Updated to reflect fact that mkinstalldirs will be
	in distribution.

	* cxxonly.test: Removed.

Mon Aug 31 09:46:59 1998  Matthew D. Langston  <langston@SLAC.Stanford.EDU>

	* Makefile.am (TESTS): Added compile_f_c_cxx.test.
	* compile_f_c_cxx.test: New file.

Sat Aug 29 18:17:58 1998  Matthew D. Langston  <langston@SLAC.Stanford.EDU>

	* Makefile.am (TESTS): Added flink.test link_c_cxx.test
	link_f_c.test link_f_c_cxx.test link_f_cxx.test link_f_only.test.
	Removed flink.test.
	* flibs.test: New File.
	* link_c_cxx.test: New file.
	* link_f_c.test: New file.
	* link_f_c_cxx.test: New file.
	* link_f_cxx.test: New file.
	* link_f_only.test: New file.

Tue Aug 11 10:46:36 1998  Matthew D. Langston  <langston@SLAC.Stanford.EDU>

	* Makefile.am (TESTS): Add cxxonly.test, fonly.test, flink.test,
	fnoc.test and fo.test.
	* cxxonly.test: New file.
	* fonly.test: New file.
	* flink.test: New file.
	* fnoc.test: New file.
	* fo.test: New file.

1998-10-08  Tom Tromey  <tromey@cygnus.com>

	* confdist.test: New file.
	* Makefile.am (TESTS): Added confdist.test.

1998-10-07  Tom Tromey  <tromey@cygnus.com>

	* extra4.test: New file.
	* extra3.test: New file.
	* Makefile.am (TESTS): Added extra3.test, extra4.test.

Mon Oct  5 12:47:32 1998  Tom Tromey  <tromey@cygnus.com>

	* badline.test: New file.
	* Makefile.am (TESTS): Added badline.test.

Thu Oct  1 00:03:39 1998  Tom Tromey  <tromey@cygnus.com>

	* seenc.test: Updated test to account for removed line numbers.

	* xsource.test: Correctly fail if source in subdir.

Wed Sep 30 12:17:34 1998  Tom Tromey  <tromey@cygnus.com>

	* colon7.test: New file.
	* Makefile.am (TESTS): Added colon7.test.

Tue Sep 29 02:09:11 1998  Tom Tromey  <tromey@cygnus.com>

	* config.test: New file.
	* Makefile.am (TESTS): Added config.test.
