@@ -1,3 +1,7 @@
+1998-10-20  Tom Tromey  <tromey@cygnus.com>
+
+	* Makefile.am (TESTS): Sorted tests.  From Jeff Garzik.
+
 1998-10-13  Tom Tromey  <tromey@cygnus.com>
 
 	* libobj7.test: Updated to reflect minor change in automake (test
